--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "prebuild": "cd ../airbnb-front && npm run-script build",
+    "build": "cp -r ../airbnb-front/build/ public/"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
